# motion_detection

./: CMakeLists.txt  MailPhotoSender.h  MotionDetector.cpp  MotionDetector.h  PythonMailPhotoSender.cpp  PythonMailPhotoSender.h  README.md  SendMail.py  main.cpp  send_mail.conf
